# couples-clash-championship

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  plan.md  render.yaml
backend/: pyproject.toml
backend/app/: content_loader.py  main.py  models.py  routes.py  state.py  ws.py
content/: emojis.json  lyrics.json  rapidfire.json  scenes.json  trivia.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/bracket/: BracketView.tsx  MatchCard.tsx
frontend/src/components/duel/: DuelPanel.tsx
frontend/src/components/layout/: FloatingElements.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/shared/: BackgroundMusic.tsx  RulesPanel.tsx  SettingsBar.tsx  SfxController.tsx  StageAnnouncement.tsx  Timer.tsx
frontend/src/context/: GameContext.tsx
frontend/src/pages/: BracketPage.tsx  DuelPage.tsx  Home.tsx  LeaderboardPage.tsx
frontend/src/state/: mock.ts  types.ts
public/content/: .gitkeep
public/sfx/: .gitkeep
