[project]
name = "couples-clash-back"
version = "0.1.0"
description = "FastAPI backend for Couples Clash Championship"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.6.4",
  "python-multipart==0.0.9"
]

[project.optional-dependencies]
dev = ["ruff==0.3.5", "httpx==0.27.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
